--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -354,6 +354,18 @@
     <div class="list instapics">
       <img *ngFor="let img of lists[2]" src="{{ img }}" />
     </div>
+    <div class="mariagenet">
+      <a
+        rel="nofollow"
+        href="https://www.mariages.net"
+        title="Mariages.net"
+        target="_blank"
+        ><img
+          alt="Mariages.net"
+          src="https://www.mariages.net/images/sellos/label-partenaire--pp211061.png"
+          style="border-width: 0px"
+      /></a>
+    </div>
     <div class="copyright">
       <p>Copyright © Cloe Chaudron Beauty</p>
       <p></p>
