--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -380,6 +380,17 @@
           style="border-width: 0px"
       /></a>
     </div>
+
+    <div class="prixmariagenet">
+      <div id="wp-ratedWA">
+        <a target="_blank" href="https://www.mariages.net/esthetique-coiffure-mariage/cloe-chaudron--e211061" rel="nofollow" title="Cloé Chaudron, gagnant Wedding Awards 2025 Mariages.net">
+            <img width="125" height="125" alt="Cloé Chaudron, gagnant Wedding Awards 2025 Mariages.net" id="wp-ratedWA-img-2025" src="https://cdn1.mariages.net/img/badges/2025/badge-weddingawards_fr_FR.jpg">
+        </a>
+      </div>
+      <script type="text/javascript" src="https://cdn1.mariages.net/_js/wp-rated.js?v=4"></script>
+      <script>wpShowRatedWAv3('211061','2025');</script>
+    </div>
+
     <div class="copyright">
       <p>Copyright © Cloe Chaudron Beauty</p>
       <p></p>
