--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div
   class="container"
   [class.portrait]="!paysage"
+  [class.paysage]="paysage"
   [class.bigscreen]="bigscreen"
 >
   <div [class.invisible]="!showMenu" class="portrait-menu">
